// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteButton DeleteButton component 1`] = `
<div
  className="obojobo-draft--components--delete-button"
>
  <button
    disabled={undefined}
    onClick={undefined}
    tabIndex={undefined}
  >
    Delete
  </button>
</div>
`;

exports[`DeleteButton DeleteButton component disabled 1`] = `
<div
  className="obojobo-draft--components--delete-button"
>
  <button
    disabled={undefined}
    onClick={undefined}
    tabIndex={undefined}
  >
    Delete
  </button>
</div>
`;

exports[`DeleteButton DeleteButton component with onClick 1`] = `
<div
  className="obojobo-draft--components--delete-button"
>
  <button
    disabled={undefined}
    onClick={[Function]}
    tabIndex={undefined}
  >
    Delete
  </button>
</div>
`;

exports[`DeleteButton DeleteButton component with shouldPreventTab 1`] = `
<div
  className="obojobo-draft--components--delete-button"
>
  <button
    disabled={true}
    onClick={undefined}
    tabIndex="-1"
  >
    Delete
  </button>
</div>
`;

exports[`DeleteButton DeleteButton component with tabIndex 1`] = `
<div
  className="obojobo-draft--components--delete-button"
>
  <button
    disabled={undefined}
    onClick={undefined}
    tabIndex={50}
  >
    Delete
  </button>
</div>
`;
